--- a/Meditreks.css
+++ b/Meditreks.css
@@ -215,7 +215,6 @@ display: none;
   box-shadow: 4px 4px 12px 12px rgba(0, 0, 0, 0.04);
   border-radius: 15px;
   padding: 2% 8%;
-  height: 20vh;
   border: 0px;
   margin-top: 5%;
 }
@@ -664,7 +663,7 @@ textarea::placeholder {
 
     /*Section4*/
     .card-section4{
-      height: 55vh;
+      height: auto;
     }
 
     /*Section9*/
