--- a/Meditreks.css
+++ b/Meditreks.css
@@ -472,9 +472,12 @@ display: none;
   margin: 5% 0%;
 }
 .sec8-sec-container {
-  padding: 5% 5%;
+  padding: 5% 0%;
   border: solid 1px #dadada;
   border-radius: 15px;
+}
+.images-container{
+  
 }
 .slidecontainer {
   width: 100%;
@@ -521,14 +524,14 @@ display: none;
 
 .price-text {
   text-transform: uppercase;
+  text-align: center;
+
   color: #74aedb;
   background-color: #e6f0f9;
-  width: 60%;
-  border-radius: 25px;
-  margin-top: 5%;
-  padding: 3% 0;
+  border-radius: 35px;
+  margin-top: 20px;
+  padding: 15px 0px;
   font-weight: 700;
-  text-align: center;
 }
 .image1-col {
   padding-left: 9%;
@@ -557,8 +560,7 @@ display: none;
   color: #fa9273;
   background-color: #feeeee;
   border-radius: 25px;
-  padding: 1% 0%;
-  width: 20%;
+  padding: 15px 25px;
   font-weight: 700;
   text-decoration: line-through;
   text-align: center;
@@ -729,7 +731,15 @@ textarea::placeholder {
 
     /*section8*/
     #pills-slider{
-      transform: translateX(150px);
+      transform: translateX(50px);
+    }
+
+    .price-text {
+      text-transform: uppercase;
+      text-align: center;
+      font-size: 12px;
+      padding: 10px 3px;
+      font-weight: 700;
     }
     /*Section9*/
     #section9{
