--- a/Meditreks.css
+++ b/Meditreks.css
@@ -3,6 +3,8 @@
   --custom-right: 38px;
   --custom-bottom: -15px;
   --custom-right: 38px;
+  --custom-md-slider:205px;
+  --custom-mobile-slider:132px;
 }
 
 body {
@@ -463,7 +465,7 @@ display: none;
   background: #74aedb;
   border-radius: 500px;
   transition: 0.6s ease transform;
-  transform: translateX(205px);
+  transform: translateX(var(--custom-md-slider));
 }
 .sec8-plus {
   font-weight: 600;
@@ -730,8 +732,12 @@ textarea::placeholder {
     }
 
     /*section8*/
-    #pills-slider{
-      transform: translateX(50px);
+    #pills-slider {
+      padding: 15px;
+      margin: 2px 0px;
+      width: 47%;
+      background: #74aedb;
+      transform: translateX(var(--custom-mobile-slider));
     }
 
     .price-text {
@@ -740,6 +746,13 @@ textarea::placeholder {
       font-size: 12px;
       padding: 10px 3px;
       font-weight: 700;
+    }
+
+    .pill-button{
+      top: -2px;
+  font-size: medium;
+  font-weight: 700;
+  padding: 8px 20px;
     }
     /*Section9*/
     #section9{
