--- a/Meditreks.css
+++ b/Meditreks.css
@@ -442,7 +442,8 @@ display: none;
   color: white;
   text-transform: uppercase;
   font-weight: 700;
-  padding: 1.5% 7%;
+  align-self: center;
+  padding: 12px 48px;
   border-radius: 50px;
 }
 
@@ -532,7 +533,7 @@ display: none;
   background-color: #e6f0f9;
   border-radius: 35px;
   margin-top: 20px;
-  padding: 15px 0px;
+  padding: 15px 5px;
   font-weight: 700;
 }
 .image1-col {
