--- a/Meditreks.css
+++ b/Meditreks.css
@@ -121,20 +121,22 @@ display: none;
 }
 
 .carousel-caption {
-  bottom: 0px;
+  bottom: -1px;
   left: 0px;
-  width: 47vw;
+  width: 46vw;
   background: white;
   padding: 35px 0px;
+  height: 122.5px;
 }
 
 .section3-heading {
   color: black;
+  text-shadow: none;
   font-weight: 900;
   font-size: 40px;
   text-transform: uppercase;
-  margin-left: 18%;
-  margin-right: 12%;
+  margin-left: 80px;
+  margin-right: 50px;
 }
 
 .section3-sub-heading {
@@ -143,9 +145,10 @@ display: none;
   line-height: 1.4;
   text-align: left;
   color: #707070;
-  margin-left: 18%;
-  margin-right: 12%;
-  bottom: -26%;
+  margin-left: 80px;
+  margin-right: 50px;
+  bottom: -30px;
+  text-shadow: none;
 }
 
 .bottom-right {
@@ -155,8 +158,8 @@ display: none;
   bottom: 5.5%;
   background: #2a2a2a;
   color: black;
-  width: 20%;
-  height: 24.9%;
+  width: 21.5%;
+  height: 121px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -430,8 +433,9 @@ display: none;
   cursor: pointer;
   font-size: medium;
   font-weight: 700;
-  top: -5%;
+  top: -1%;
   padding: 3% 15%;
+  border: none  !important;
   outline: none !important;
   box-shadow: none !important;
   text-transform: uppercase;
@@ -448,12 +452,12 @@ display: none;
 }
 
 #Annually {
-  right: 0%;
+  right: -3px;
   color: white;
 }
 
 #Monthly {
-  left: 0%;
+  left: -3px;
 }
 .pills-container {
   position: relative;
@@ -558,6 +562,13 @@ display: none;
   color: #8c8c8c;
 }
 
+.section8-added-heading{
+  color: black;
+  font-weight: 900;
+  font-size: 35px;
+  text-transform: uppercase;
+}
+
 #discount {
   text-transform: uppercase;
   color: #fa9273;
@@ -639,12 +650,20 @@ textarea::placeholder {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .navbar{
-    padding-left:10px;
+    padding-right: 25px;
+    padding-left: 0px;  
   }
+
   .navbar-brand-left {
     width: 200px;
-    margin-left: 15px;
+    height: auto;
+    margin-left: -15px;
   }
+
+  .main-cover-wrapper > .container {
+    margin-top: 30px;
+  }
+
   .signup-nav {
     padding: 8px 40px;
     margin-left: 0px;
@@ -674,21 +693,32 @@ textarea::placeholder {
       display: block;
     }
 
+    .sec3-carousel{
+      padding-bottom: 110px;
+    }
     .carousel-caption {
       position: absolute;
-      bottom: 5px;
+      bottom: -95px;
       left: 10px;
       right: 10px;
       width: auto;
       padding:0px 0px;
-      background: none;
+      background: white
     }
     .section3-mobile-heading{
-      font-size: 18px;
+      margin-top: 10px;
+      font-size: 25px;
+      color: black;
+      font-weight: 900;
+      text-shadow: none;
+
     }
     .section3-mobile-subheading{
       font-size: 15px;
       padding: 0px 15px;
+      color: #707070;
+      text-shadow: none;
+
     }
 
     /*Section4*/
@@ -792,6 +822,11 @@ textarea::placeholder {
     
     .section5-sub-heading {
       font-size: 20px;
+    }
+
+    .section8-added-heading{
+      font-size: 25px;
+      padding: 0px 15px;
     }
 
 }
