testing pill fix1

--- a/Meditreks.css
+++ b/Meditreks.css
@@ -479,8 +479,8 @@ display: none;
   border-radius: 500px;
 }
 #pills-slider {
-  padding: 5%;
-  margin: 0.25% 0%;
+  padding: 22px 0px;
+  margin: 3px 0px;
   width: 50%;
   background: #74aedb;
   border-radius: 500px;
