--- a/Meditreks.css
+++ b/Meditreks.css
@@ -14,6 +14,19 @@ body {
   overflow-x: hidden;
 }
 
+#section1{
+  background-image: linear-gradient(
+    rgba(116, 174, 219, 0.65),
+    rgba(116, 174, 219, 0.65)
+  ),
+  url("./Assets/mainCover.jpg");
+
+background-repeat: no-repeat;
+width: 100%;
+background-size: cover;
+background-position: bottom;
+}
+
 .navbar{
   padding-top: 15px;
   padding-right: 70px;
@@ -26,21 +39,11 @@ body {
 }
 
 .main-cover-wrapper {
-  background-image: linear-gradient(
-      rgba(116, 174, 219, 0.65),
-      rgba(116, 174, 219, 0.65)
-    ),
-    url("./Assets/mainCover.jpg");
-
-  background-repeat: no-repeat;
-  width: 100%;
-  background-size: cover;
-  background-position: bottom;
   padding-bottom: 120px;
 }
 
 .main-cover-wrapper > .container {
-  margin-top: 12%;
+  margin-top: 9%;
 }
 .nav-link {
   font-size: 15px;
@@ -673,7 +676,7 @@ textarea::placeholder {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
   .navbar{
     padding-right: 25px;
     padding-left: 0px;  
@@ -704,10 +707,7 @@ textarea::placeholder {
     font-size: 16px;
     color: white;
   }
-  .main-cover-wrapper{
-    height: 65vh;
-  }
-
+  
   /*Section3*/
 
     #section3{
@@ -873,14 +873,36 @@ textarea::placeholder {
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
- 
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  
+  .nav-link {
+    margin-right: 15px;
+    margin-top: 40px;
+  }
+
+  .navbar-brand-left {
+    width: 200px;
+    height: auto;
+    margin-left: -55px;
+  }
+
+  .signup-nav {
+    padding: 12px 65px;
+    border-radius: 25px;
+    margin-left: 15px;
+    margin-top: 40px;
+
+  }
 
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {
-  
+@media only screen and (min-width: 992px) and (max-width: 1200px){
+  .navbar-brand-left {
+    width: 200px;
+    height: auto;
+    margin-left: -55px;
+  }
 
 }
 
