--- a/Meditreks.css
+++ b/Meditreks.css
@@ -128,6 +128,10 @@ display: none;
   padding-top: 1%;
 }
 
+.section-sub-heading-only{
+  padding: 1% 30%;
+}
+
 .carousel-caption {
   bottom: -1px;
   left: 0px;
